Refactoring db connect and controller
